// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseListFilter should render correctly 1`] = `
<styled.div>
  <styled.input
    name="textFilter"
    onChange={[Function]}
    placeholder="Search expenses"
    type="text"
    value=""
  />
  <styled.select
    name="sortFilter"
    onChange={[Function]}
    value="date"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </styled.select>
  <StyledDateRangePicker
    endDate={"1970-01-04T00:00:00.000Z"}
    endDateId="endDateId"
    focusedInput={null}
    isOutsideRange={[Function]}
    numberOfMonths={1}
    onDatesChange={[Function]}
    onFocusChange={[Function]}
    showClearDates={true}
    startDate={"1970-01-01T00:00:00.000Z"}
    startDateId="startDateId"
  />
</styled.div>
`;

exports[`ExpenseListFilter should render with alt data correctly 1`] = `
<styled.div>
  <styled.input
    name="textFilter"
    onChange={[Function]}
    placeholder="Search expenses"
    type="text"
    value="bills"
  />
  <styled.select
    name="sortFilter"
    onChange={[Function]}
    value="amount"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </styled.select>
  <StyledDateRangePicker
    endDate={"1970-01-11T00:00:00.000Z"}
    endDateId="endDateId"
    focusedInput={null}
    isOutsideRange={[Function]}
    numberOfMonths={1}
    onDatesChange={[Function]}
    onFocusChange={[Function]}
    showClearDates={true}
    startDate={"1970-01-01T00:00:00.000Z"}
    startDateId="startDateId"
  />
</styled.div>
`;
